<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.Categories_frg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="vertical"
            android:background="@drawable/men_beck"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Men"
                android:textColor="@color/whate"
                android:fontFamily="@font/saudi"
                android:textSize="62sp"
                android:gravity="center|bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bestthig"
                android:textColor="@color/whate"
                android:fontFamily="@font/saudi"
                android:textSize="28sp"
                android:gravity="center|top"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="vertical"
            android:background="@drawable/women_beck"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Wemen"
                android:textColor="@color/whate"
                android:fontFamily="@font/saudi"
                android:textSize="62sp"
                android:gravity="center|bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bestthig"
                android:textColor="@color/whate"
                android:fontFamily="@font/saudi"
                android:textSize="28sp"
                android:gravity="center|top"/>
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="vertical"
            android:background="@drawable/boy_beck"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Boy"
                android:textColor="@color/whate"
                android:fontFamily="@font/saudi"
                android:textSize="62sp"
                android:gravity="center|bottom"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bestthig"
                android:textColor="@color/whate"
                android:fontFamily="@font/saudi"
                android:textSize="28sp"
                android:gravity="center|top"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>