<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.Address">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#f2f2f2"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView

            android:src="@drawable/ic_back"
            android:id="@+id/back_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <View

            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="SOUG"
            android:textColor="@color/grey"
            android:fontFamily="@font/saudi"
            android:textSize="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="11dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <ImageView
            android:visibility="gone"
            android:layout_width="120dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/logo"
            android:scaleType="fitXY"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:id="@+id/header2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/whate"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/contin_order"
            android:textSize="18dp"
            android:textColor="@color/grey"
            android:fontFamily="@font/saudi"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/t2"
            android:gravity="center"
            android:id="@+id/t1"
            android:drawableBottom="@drawable/ic_view_line_center"/>
        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/whate"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/review"
            android:textSize="18dp"
            android:textColor="@color/grey"
            android:fontFamily="@font/saudi"
            app:layout_constraintRight_toLeftOf="@+id/t1"
            app:layout_constraintLeft_toRightOf="@id/t3"
            android:gravity="center"
            android:id="@+id/t2"
            android:drawableBottom="@drawable/ic_view_line_center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/whate"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/address"
            android:textSize="18dp"
            android:textColor="@color/grey2"
            android:fontFamily="@font/saudi"
            app:layout_constraintRight_toLeftOf="@+id/t2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:drawableBottom="@drawable/ic_view_line_center_orng"
            android:id="@+id/t3"/>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/grey"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textSize="16sp"
        android:id="@+id/Name_et"
        android:inputType="textPersonName"
        android:fontFamily="@font/saudi"
        app:layout_constraintTop_toBottomOf="@+id/header2"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/grey"
        android:paddingBottom="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address1"
        android:textSize="16sp"
        android:id="@+id/address1_et"
        android:inputType="textPersonName"
        android:fontFamily="@font/saudi"
        app:layout_constraintTop_toBottomOf="@+id/Name_et"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/grey"
        android:paddingBottom="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address2"
        android:textSize="16sp"
        android:id="@+id/address2_et"
        android:inputType="textPersonName"
        android:fontFamily="@font/saudi"
        app:layout_constraintTop_toBottomOf="@+id/address1_et"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/grey"
        android:paddingBottom="30dp"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:id="@+id/ln"
        app:layout_constraintTop_toBottomOf="@+id/address2_et"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
       >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="16sp"

            android:inputType="textPersonName"
            android:fontFamily="@font/saudi"
            app:layout_constraintTop_toBottomOf="@+id/address2_et"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/grey"
            android:paddingBottom="10dp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address2"
            android:textSize="16sp"
            android:id="@+id/city_et"
            android:inputType="textPersonName"
            android:fontFamily="@font/saudi"
            app:layout_constraintTop_toBottomOf="@+id/address2_et"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/grey"
            android:paddingBottom="30dp"
            />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/foter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ln"
        app:layout_constraintRight_toRightOf="parent"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="right|center"
        android:padding="37dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30 $"
            android:fontFamily="@font/saudi"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/sub_total"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/grey2"
            android:textSize="18dp"
            />

        <TextView
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/grey2"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivring"
            android:fontFamily="@font/saudi"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        app:layout_constraintTop_toBottomOf="@+id/foter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/whate"
        android:text="@string/contin_order"
        android:fontFamily="@font/saudi"
        android:background="@drawable/checkout_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>