<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragment.Bag_frg"

    android:background="@color/background_colo">
<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="37dp"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:weightSum="1"
    android:orientation="horizontal"
    android:gravity="right|center"
    >
    <Button
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whate"
        android:text="@string/contin_order"
        android:fontFamily="@font/saudi"
        android:background="@drawable/checkout_btn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_bag"
        android:fontFamily="@font/saudi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/nb"
        app:layout_constraintBottom_toBottomOf="parent"

        />
    <TextView
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 عنصر "
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/saudi"
        android:textColor="@color/orenge"
        android:id="@+id/nb"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/t1"
        />
    <TextView
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have"
        android:fontFamily="@font/saudi"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/sv"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/whate"
            android:id="@+id/RV"/>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/foter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sv"
        app:layout_constraintRight_toRightOf="parent"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="right|center"
android:padding="37dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30 $"
            android:fontFamily="@font/saudi"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/sub_total"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/grey2"
            android:textSize="18dp"
            />

        <TextView
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/grey2"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:fontFamily="@font/saudi"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>